# farmpl

./: .env.example  .gitignore  .mmcp.json  AGENTS.md  LICENSE  README.md  deployment-architecture.md  deployment-manual-tasks.md  dev.api.sh  dev.ui.sh  mkdocs.yml
api/: Dockerfile.lambda  Dockerfile.lambda.api  Dockerfile.lambda.worker  README.md  app.py  demo_api.py  demo_lib.py  lambda_handler.py  main.py  pyproject.toml  requirements-api.txt  requirements-lambda.txt  requirements-worker.txt  worker_handler.py
api/core/: auth.py  config.py  errors.py  logging.py  metrics.py  rate_limit.py
api/demo/: compare.py  print_utils.py  sample.py
api/docs/: commands.md  draft.md  model.md  performance.md  requirement.md  tasks.md  tech.md  templates.md
api/lib/: __init__.py  constants.py  diagnostics.py  interfaces.py  model_builder.py  objectives.py  planner.py  schemas.py  solver.py  thirds.py  variables.py
api/routers/: exports.py  metrics.py  optimize.py  system.py  templates.py
api/schemas/: __init__.py  export.py  metrics.py  optimization.py  templates.py
api/services/: __init__.py  export_aggregator.py  export_renderer.py  export_uploader.py  job_backend.py  job_backend_dynamo.py  job_runner.py  metrics_aggregator.py  optimizer_adapter.py  template_instantiator.py  templates_loader.py
api/templates/: README.md
api/tests/: conftest.py  test_auth.py  test_blocked_periods.py  test_error_responses.py  test_event_dependencies.py  test_fixed_and_bounds.py  test_fixed_area_tag.py  test_harvest_idle_constraints.py  test_hold_area_and_fixed_area_interaction.py  test_hold_area_with_occupancy.py  test_hold_area_with_occupancy_end_change.py  test_hold_effect_continuation.py  test_labor_and_resources.py  (+19 more)
(+271 files in other folders)
