[project]
name = "farmpl-api"
version = "0.1.0"
description = "FarmPL API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ortools>=9.14.6206",
    "pydantic>=2.8.0",
    "pytest>=8.4.1",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "types-requests",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "types-requests>=2.32.4.20250809",
]
