[project]
name = "farmpl-api"
version = "0.1.0"
description = "FarmPL API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "ortools>=9.14.6206",
    "pydantic>=2.8.0",
    "typing-extensions>=4.12.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.22.1",
    "boto3>=1.35.0",
    "mangum>=0.17.0",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "types-requests",
    "ruff>=0.5.0",
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.22",
    "ruff>=0.12.10",
    "types-requests>=2.32.4.20250809",
]
